--- a/web/package.json
+++ b/web/package.json
@@ -13,8 +13,10 @@
     "better-react-carousel": "^1.1.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "date-fns": "^2.30.0",
     "firebase": "^9.22.1",
     "joi": "^17.9.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
