--- a/mobile/hello-world/package.json
+++ b/mobile/hello-world/package.json
@@ -25,6 +25,7 @@
     "react-native-dotenv": "^3.4.9",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-reanimated": "~2.14.4",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
