--- a/mobile/hello-world/package.json
+++ b/mobile/hello-world/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/checkbox": "^0.5.16",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
@@ -26,6 +27,7 @@
     "react-native-config": "^1.5.1",
     "react-native-dotenv": "^3.4.9",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-paper": "^5.9.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^9.2.0"
