--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,8 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
-    "recharts": "^2.6.2"
+    "recharts": "^2.6.2",
+    "emailjs-com": "^2.6.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
